# celery-flask

celery-demo/: Queries_Insomnia.json  contadores.py  gitflow.txt  pyproject.toml
celery-demo/celery_demo/: .env  __init__.py  __main__.py
celery-demo/celery_demo/templates/: index.html
celery-demo/tests/: test_celery_demo.py
