[tool.poetry]
name = "celery-demo"
version = "0.1.0"
description = ""
authors = ["Rodrigo"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-Mail = "^0.9.1"
celery = "^5.2.3"
python-decouple = "^3.6"
redis = "^4.1.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
